# egakeru

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  README_docker.md  compile_commands.json  cpp.hint  tracy  vcpkg.json  vulkaninfo.txt  vulkaninfo_pc.txt
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
engine/: CMakeLists.txt  camera.cpp  camera.h  console.cpp  console.h  defines.h  editor_gizmo.cpp  editor_gizmo.h  entry.h  event.cpp  event.h  frame_data.h  frustum.h  identifier.cpp  identifier.h  input.cpp  input.h  keymap.cpp  keymap.h  keys.h  pch.h  plane.h  ray.cpp  ray.h  renderable.h  transformable.h
engine/application/: application.cpp  application.h  application_configuration.h
engine/containers/: ring_queue.h
engine/debug/: debug_box3d.cpp  debug_box3d.h  debug_console.cpp  debug_console.h  debug_frustum.cpp  debug_frustum.h  debug_grid.cpp  debug_grid.h  debug_line.cpp  debug_line.h
engine/engine/: engine.cpp  engine.h  engine_configuration.h
engine/game/: game.cpp  game.h
engine/interfaces/: transformable.h
engine/loaders/: binary_loader.cpp  binary_loader.h  bitmap_font_loader.cpp  bitmap_font_loader.h  image_loader.cpp  image_loader.h  material_loader.cpp  material_loader.h  mesh_loader.cpp  mesh_loader.h  parser.h  resource_loader.cpp  resource_loader.h  scene_loader.cpp  scene_loader.h  shader_loader.cpp  shader_loader.h  system_font_loader.cpp  system_font_loader.h  terrain_loader.cpp  terrain_loader.h  text_loader.cpp  text_loader.h
engine/log/: log.cpp  log.h
engine/platform/: filesystem.cpp  filesystem.h  platform.cpp  platform.h
engine/platform/linux/: platform_linux.cpp  platform_linux.h
engine/platform/windows/: platform_windows.cpp  platform_windows.h
engine/plugins/audio/: audio_loader.cpp  audio_loader.h  audio_plugin.h  oal_plugin.cpp  oal_plugin.h
engine/plugins/renderer/vulkan/: CMakeLists.txt  command_buffer.cpp  renderer_vulkan.cpp  renderer_vulkan.h  swapchain.cpp  swapchain.h  vulkan_geometry.cpp  vulkan_geometry.h  vulkan_render_target.cpp  vulkan_renderbuffer.cpp  vulkan_renderpass.cpp  vulkan_shader.cpp  vulkan_texture.cpp  vulkan_texture.h  vulkan_types.h
engine/renderer/: camera.cpp  camera.h  render_graph.cpp  render_graph.h  render_target.cpp  render_target.h  render_view.cpp  render_view.h  renderbuffer.cpp  renderbuffer.h  renderer_frontend.cpp  renderer_frontend.h  renderer_types.cpp  renderer_types.h  renderpass.cpp  renderpass.h  vertex_types.h  viewport.cpp  viewport.h
engine/renderer/passes/: editor_pass.cpp  editor_pass.h  oit_pass.cpp  oit_pass.h  scene_pass.cpp  scene_pass.h  shadow_pass.cpp  shadow_pass.h  skybox_pass.cpp  skybox_pass.h  ui_pass.cpp  ui_pass.h
engine/renderer/views/: render_view_editor.cpp  render_view_editor.h  render_view_pick.cpp  render_view_pick.h  render_view_skybox.cpp  render_view_skybox.h  render_view_ui.cpp  render_view_ui.h  render_view_world.cpp  render_view_world.h
engine/renderer/vulkan/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  pipeline.cpp  pipeline.h  renderer_vulkan.cpp  renderer_vulkan.h  renderpass.cpp  renderpass.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  vulkan_geometry.cpp  vulkan_geometry.h  vulkan_material.cpp  vulkan_material.h  vulkan_render_target.cpp  vulkan_render_target.h  vulkan_renderbuffer.cpp  vulkan_renderbuffer.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_types.h
engine/resources/: audio.h  font.h  geometry.cpp  geometry.h  job.cpp  job.h  light.h  material.cpp  material.h  mesh.cpp  mesh.h  resource.cpp  resource.h  shader.cpp  shader.h  skybox.cpp  skybox.h  terrain.cpp  terrain.h  texture.cpp  texture.h  transform.cpp  transform.h  ui_text.cpp  ui_text.h
engine/scenes/: simple_scene.cpp  simple_scene.h
engine/systems/: audio_system.cpp  audio_system.h  camera_system.cpp  camera_system.h  console_system.cpp  console_system.h  evar_system.cpp  evar_system.h  font_system.cpp  font_system.h  geometry_system.cpp  geometry_system.h  geometry_utils.h  input.cpp  input.h  job_system.cpp  job_system.h  light_system.cpp  light_system.h  material_system.cpp  material_system.h  resource_system.cpp  resource_system.h  shader_system.cpp  shader_system.h  system.cpp  system.h  texture_system.cpp  texture_system.h  ui_system.cpp  ui_system.h  view_system.cpp  view_system.h
engine/ui/: std_ui.h
fuzz_test/: CMakeLists.txt
include/: Application.h  ApplicationCore.h  BoardProperties.h  EngineCore.h  Instrumentor.h
plugins/renderer/vulkan/: CMakeLists.txt  fence.cpp  renderer_vulkan.cpp  renderer_vulkan.h  swapchain.cpp  swapchain.h  vulkan_geometry.h  vulkan_main.cpp  vulkan_main.h  vulkan_render_target.cpp  vulkan_renderpass.cpp  vulkan_renderpass.h
sandbox/: CMakeLists.txt  entry.cpp  main.cpp  sandbox_application.cpp  sandbox_application.h  sandbox_game.cpp  sandbox_game.h  sandbox_keybinds.cpp  sandbox_keybinds.h
src/: CMakeLists.txt
src/egakeru/: Application.cpp  ApplicationCore.cpp  CMakeLists.txt  Instrumentor.cpp  main.cpp
src/egakeru/Log/: Log.cpp
src/egakeru/Platform/: Window.cpp
src/egakeru/Platform/Windows/: WindowsWindow.cpp
src/egakeru/renderer/: Buffer.cpp  CommandBuffer.cpp  Initialisers.cpp  Pipeline.cpp  Renderer.cpp  RendererCore.cpp  Sprite.cpp  SpriteRenderer.cpp  Texture.cpp
src/egakeru/shaders/: board.frag  board.vert  boardFrag.spv  boardVert.spv  compile.bat  frag.spv  shader.frag  shader.vert  sprite.frag  sprite.vert  spriteFrag.spv  spriteVert.spv  vert.spv
src/egakeru/ui/: gui.cpp
src/engine/: CMakeLists.txt  main.cpp
src/engine/log/: log.h
test/: CMakeLists.txt  (+2 more)
(+100 files in other folders)
